--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -422,14 +422,14 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavBg"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="65dp"
         app:cardBackgroundColor="#0C131D"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavBack"
         android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_height="65dp"
         android:onClick="openHome"
         app:cardBackgroundColor="#16202A"
         app:cardCornerRadius="0dp"
@@ -465,7 +465,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavPB"
         android:layout_width="120dp"
-        android:layout_height="80dp"
+        android:layout_height="65dp"
         android:onClick="openNavPureBlack"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
@@ -482,7 +482,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/timeburnernormal"
                 android:gravity="center"
-                android:text="Pure\nBlack\nThemes"
+                android:text="@string/pure_black_nav"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -494,7 +494,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavTGX"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="65dp"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardNavPB"
@@ -533,14 +533,14 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardNavOthers"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="65dp"
         android:onClick="openNavOther"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardNavTGX"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView3">
+        app:layout_constraintTop_toTopOf="@+id/cardNavTGX">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -552,7 +552,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/timeburnernormal"
                 android:gravity="center"
-                android:text="Other\nThemes"
+                android:text="@string/other_themes_nav"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
