Updated the popup when there is a new version available

--- a/app/src/main/res/drawable/buttonstyle.xml
+++ b/app/src/main/res/drawable/buttonstyle.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="2dp" android:color="@color/colorAccent"/>
     <corners android:radius="20dp"/>
+    <padding android:top="15dp" android:bottom="15dp" android:left="15dp" android:right="15dp"/>
+</shape>
+-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#fc466b"
+        android:endColor="#3f5efb"
+    />
+    <corners android:radius="10dp"/>
     <padding android:top="15dp" android:bottom="15dp" android:left="15dp" android:right="15dp"/>
 </shape>
