--- a/app/src/main/res/layout/outdatedpopup.xml
+++ b/app/src/main/res/layout/outdatedpopup.xml
@@ -54,13 +54,14 @@
             android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:fontFamily="@font/timeburnernormal"
             android:gravity="center_horizontal"
-            android:text="A new version has been released"
+            android:text="There is a new version available\non the Play  Store\nYou should really update."
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,18 +71,18 @@
             android:id="@+id/buttonUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="250dp"
-            android:layout_marginEnd="100dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="100dp"
             android:layout_marginStart="100dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="250dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="250dp"
+            android:background="@drawable/buttonwithshadow"
             android:text="Open Play Store"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView17"
-            android:background="@drawable/buttonstyle"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView17" />
     </android.support.constraint.ConstraintLayout>
 
 
