--- a/app/src/main/res/layout/outdatedpopup.xml
+++ b/app/src/main/res/layout/outdatedpopup.xml
@@ -22,7 +22,8 @@
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:foreground="?android:attr/selectableItemBackground"/>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
