--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,19 +69,16 @@
                         android:id="@+id/textView7"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginBottom="16dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:text="@string/news1Content"
                         android:textColor="#fff"
                         android:textSize="12sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView3"
-                        app:layout_constraintTop_toTopOf="@+id/imageView3"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
                     <TextView
                         android:id="@+id/textView8"
@@ -100,7 +97,8 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/textView10" />
+                        app:layout_constraintStart_toEndOf="@+id/textView10"
+                        android:foreground="?android:attr/selectableItemBackground"/>
 
                     <TextView
                         android:id="@+id/textView10"
@@ -121,7 +119,8 @@
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
                         app:layout_constraintEnd_toStartOf="@+id/textView8"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/textView8" />
+                        app:layout_constraintTop_toTopOf="@+id/textView8"
+                        android:foreground="?android:attr/selectableItemBackground"/>
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.v7.widget.CardView>
@@ -182,7 +181,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
             android:clipToPadding="false"
-            android:fillViewport="false"
+            android:fillViewport="true"
             app:layout_constraintBottom_toTopOf="@+id/cardNavBg"
             app:layout_constraintTop_toBottomOf="@+id/cardHeader">
 
@@ -224,6 +223,7 @@
                     android:layout_width="148dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:onClick="openNavTGX"
                     android:visibility="visible"
                     app:cardBackgroundColor="@android:color/transparent"
@@ -266,6 +266,7 @@
                     android:layout_width="148dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:onClick="openNavPureBlack"
                     android:visibility="visible"
                     app:cardBackgroundColor="@android:color/transparent"
@@ -328,7 +329,8 @@
                     app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView49">
+                    app:layout_constraintTop_toBottomOf="@+id/textView49"
+                    android:foreground="?android:attr/selectableItemBackground">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -686,7 +688,8 @@
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardNavBack">
+        app:layout_constraintStart_toEndOf="@+id/cardNavBack"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -716,7 +719,8 @@
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/cardNavPB"
         app:layout_constraintEnd_toStartOf="@+id/cardNavOthers"
-        app:layout_constraintStart_toEndOf="@+id/cardNavPB">
+        app:layout_constraintStart_toEndOf="@+id/cardNavPB"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -746,7 +750,8 @@
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardNavTGX">
+        app:layout_constraintStart_toEndOf="@+id/cardNavTGX"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
