--- a/app/src/main/res/layout/fragment_standard.xml
+++ b/app/src/main/res/layout/fragment_standard.xml
@@ -74,7 +74,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView13"
-                app:layout_constraintVertical_bias="0.0">
+                app:layout_constraintVertical_bias="0.0"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
